--- a/style.css
+++ b/style.css
@@ -4,86 +4,160 @@
 
 :root {
     
-    /* font-sizes */
-    --fs-900: 9.375rem;
-    --fs-800: 6.25rem;
-    --fs-700: 3.5rem;
-    --fs-600: 2rem;
-    --fs-500: 1.75rem;
-    --fs-400: 1.125rem;
-    --fs-300: 1rem;
-    --fs-200: 0.875rem;
-    
+  /* font-sizes */
+  --fs-900: 9.375rem;
+  --fs-800: 6.25rem;
+  --fs-700: 3.5rem;
+  --fs-600: 2rem;
+  --fs-500: 1.75rem;
+  --fs-400: 1.125rem;
+  --fs-300: 1rem;
+  --fs-200: 0.875rem;
+  
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-    font-family: 'Julius Sans One', sans-serif;
-    font-size: var(--fs-400);
-    color: hsl( var(--clr-white) );
-    background-color: hsl( var(--clr-dark) );
-    line-height: 1.5;
-    min-height: 100vh;
-    background-color: white;
+  font-family: sans-serif;
+  letter-spacing: 1.5px;
+  font-size: var(--fs-400);
+  color: hsl( var(--clr-white) );
+  background-color: hsl( var(--clr-dark) );
+  line-height: 1.8;
+  min-height: 100vh;
+  background-color: white;
 }
 
 .btn {
-    margin-top: 2rem;
-    padding: 0;
-    font-size: var(--fs-400);
-    letter-spacing: 2.5px;
-    cursor: pointer;
-    background-color: white;
-    border: none;
-    transition: 300ms;
+  margin-top: 2rem;
+  padding: 0;
+  font-size: var(--fs-400);
+  letter-spacing: 2.5px;
+  cursor: pointer;
+  background-color: white;
+  border: none;
+  transition: 300ms;
 }
 
 .btn::after {
-  content: "";
-  display: block;
-  margin: auto;
-  margin-top: 8px;
-  height: 1px;
-  background: black;
-  background-color: rgba(0 0 0 / 85%);
-  transform: scaleX(0); 
-  transition: 300ms;
+content: "";
+display: block;
+margin: auto;
+margin-top: 8px;
+height: 1px;
+background: black;
+background-color: rgba(0 0 0 / 85%);
+transform: scaleX(0); 
+transition: 300ms;
 }
 
 .btn:hover {
-  transform: translateY(-3px);
-  transition: 300ms;
-  opacity: 100%;
+transform: translateY(-3px);
+transition: 300ms;
+opacity: 100%;
 }
 
 .btn:hover::after {
-  transform: scaleX(1);
-  transition: 300ms;
+transform: scaleX(1);
+transition: 300ms;
 }
 
 .home-btn {
-  font-size: var(--fs-500);
+font-size: var(--fs-400);
 }
 
 /* Utility classes */
 
 .flex {
-    display: flex;
-    gap: var(--gap, 1rem);
-    justify-content: space-evenly;
+  display: flex;
+  justify-content: center;
+  gap: 13em;
+  margin-inline: 1em;
+  margin-bottom: 3rem;
 }
 
 .grid {
-    display: grid;
-    gap: var(--gap, 1rem);
+  display: grid;
+  gap: var(--gap, 1rem);
 }
 
-
 .btn-active {
-  border: 1px solid black;
+border: 1px solid black;
+}
+
+.content-div {
+display: grid;
+place-items: center;
+text-align: justify;
+margin-inline: 25%;
+}
+
+.menu-grid {
+margin-left: auto;
+margin-right: auto;
+display: grid; 
+place-items: center;
+grid-template: 1fr 7fr 1fr 2fr 2.5fr 7fr 1fr / 1fr 1fr;
+max-width: 60%;
+}
+
+.animate {
+animation: fadeIn 500ms ease-in-out;
+}
+
+@keyframes fadeIn {
+from {
+  opacity: 0;
+}
+to {
+  opacity: 1;
+}
+}
+
+.animate-from-left {
+animation: fadeInFromLeft 500ms ease-in-out;
+}
+
+@keyframes fadeInFromLeft {
+from {
+  opacity: 0;
+  transform: translateX(-100%);
+}
+to {
+  opacity: 1;
+  transform: translateX(0);
+}
+}
+
+.animate-from-right {
+animation: fadeInFromRight 500ms ease-in-out;
+}
+
+@keyframes fadeInFromRight {
+from {
+  opacity: 0;
+  transform: translateX(100%);
+}
+to {
+  opacity: 1;
+  transform: translateX(0);
+}
+}
+
+@media all and (max-width: 500px) {
+.flex {
+  display: flex;
+  justify-content: center;
+  gap: 2em;
+  margin-bottom: 3rem;
+}
+
+.menu-grid {
+  transform: translateX(-30%);
+}
 }
